rename cloud-configuration to hub-configuration
